started working on the markers mapping

--- a/mappingJSON/mappingMarkersSample.json
+++ b/mappingJSON/mappingMarkersSample.json
@@ -3,6 +3,6 @@
 	"Count": "number",
 	"Name1": "ano",
 	"Name2": "gender",
-	"Latitude": "lat",
-	"Longitude": "long"
+	"Latitude": "latitude",
+	"Longitude": "longitude"
 }
