--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "jsMapsAPI",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-changed": "^1.2.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-strip-debug": "^1.0.2",
-    "gulp-uglify": "^1.2.0"
-  }
+    "name": "jsMapsAPI",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Felgueiras",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/bioinformatics-ua/jsMapsAPI.git"
+    },
+    "license": "ISC",
+    "devDependencies": {
+        "gulp": "^3.9.0",
+        "gulp-changed": "^1.2.1",
+        "gulp-concat": "^2.6.0",
+        "gulp-sourcemaps": "^1.5.2",
+        "gulp-strip-debug": "^1.0.2",
+        "gulp-uglify": "^1.2.0"
+    }
 }
